# prova

./: .gitmodules  CMakeLists.txt  LICENSE  agent.c  au.c  au.h  provenance.kdev4
.kdev4/: provenance.kdev4
cmake/: FindAuparse.cmake
server/: CMakeLists.txt  main.cpp  server.cpp
server/includes/: server.h
server/includes/sysaudit/: log.h  parser.h  reporter.h
server/sysaudit/: log.cpp  parser.cpp  reporter.cpp
tools/: CMakeLists.txt  sequence.cpp
tools/includes/prova/: action.h  artifact.h  execution_unit.h  process.h  session.h  store.h
tools/sources/: action.cpp  artifact.cpp  execution_unit.cpp  process.cpp  session.cpp  store.cpp
tools/ui/: CMakeLists.txt  exumodel.cpp  exumodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
